--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <section id="about">
 <div class="bio-container">
   <div class="pfp-container">
-  <img src="KaisReaction.png" class="pfp" alt="Profile Picture">
+  <img src="KaiPFP.jpeg" class="pfp" alt="Profile Picture">
   <div class="pfp-area">
     <p class="contact">
     <a href="mailto:kaiandshane@gmail.com">kaiandshane@gmail.com</a><br>
